[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/fonts/SourceHanSansHW-Regular.otf" type="FontFile" id=1]
[ext_resource path="res://gameplay/screen/bb_large.svg" type="Texture2D" id=2]
[ext_resource path="res://gui/button_theme.tres" type="Theme" id=3]
[ext_resource path="res://gui/fonts/SourceHanSansHW-Regular.32.tres" type="FontFile" id=4]
[ext_resource path="res://gameplay/screen/title.gd" type="Script" id=5]

[sub_resource type="FontFile" id=1]
size = 128
font_data = ExtResource( 1 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.862745, 0.862745, 0.862745, 1 )

[node name="Battleship" type="Sprite2D" parent="ColorRect"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 512, 584 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
offset_top = 664.0
offset_right = 1024.0
offset_bottom = 768.0
scale = Vector2( 0.998022, 1 )
color = Color( 0.25098, 0.25098, 0.25098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
offset_bottom = 186.0
custom_constants/separation = 16
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
offset_right = 1024.0

[node name="TitleLogo" type="Label" parent="VBoxContainer"]
offset_top = 16.0
offset_right = 1024.0
offset_bottom = 202.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "WARSHP SALVO"
align = 1

[node name="Control2" type="Control" parent="VBoxContainer"]
offset_top = 218.0
offset_right = 1024.0
offset_bottom = 250.0
custom_minimum_size = Vector2( 0, 32 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_left = 392.0
offset_top = 266.0
offset_right = 632.0
offset_bottom = 472.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 16

[node name="Start" type="Button" parent="VBoxContainer/VBoxContainer"]
offset_right = 240.0
offset_bottom = 58.0
custom_minimum_size = Vector2( 240, 0 )
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
focus_mode = 0
text = ":GAME_START:"

[node name="Options" type="Button" parent="VBoxContainer/VBoxContainer"]
offset_top = 74.0
offset_right = 240.0
offset_bottom = 132.0
custom_minimum_size = Vector2( 200, 0 )
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
focus_mode = 0
text = ":OPTIONS:"

[node name="Exit" type="Button" parent="VBoxContainer/VBoxContainer"]
offset_top = 148.0
offset_right = 240.0
offset_bottom = 206.0
custom_minimum_size = Vector2( 200, 0 )
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
focus_mode = 0
text = ":QUIT:"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
